--- a/about/index.html
+++ b/about/index.html
@@ -40,9 +40,9 @@ boxshadow: true
     <h2 class="heading--primary heading--color">profile</h2>
     <p>ペンネーム：風野 湊（かざの みなと）。1990年4月29日生。<br>旅先で猫を愛でつつ読書に耽れたら幸福。書きつづけています。</p>
     <h3 class="heading--default heading--colorDark">Writing Tools</h3>
-    <p>ポメラDM20→ポメラDM100→MacBook Air & <a href="https://stone-type.jp/" target="_blank" rel="noopenner noreferrer">Stone</a> & GitHub。VSCode執筆や校正ツールは気になりつつも未導入。Stoneのシンプルな画面が気に入っています。<br>あと、今は亡きWebサービスの即興小説トレーニングに不定期ながら7年ほど投稿していました（<a href="https://twitter.com/feelingskyblue/status/1621058939579420673" target="_blank" rel="noopenner noreferrer">サービス終了に気づいた時の嘆き</a>）。今ではもう確認できない…というか同運営の小説投稿サイトであるソナーズへリダイレクトされてしまうんですが、即興小説＆壁打ち用アカウントの<a href="https://twitter.com/windfiel_d" target="_blank" rel="noopenner noreferrer">此処</a>から名残がちょっと見られます。ブラウザで一気呵成に執筆するあの感覚もけっこう好きでした……</p>
-    <h3 class="heading--default"><span class="heading--colorDark">favorites</span> （好きなもの、愛着のあるもの、影響を受けてきたものたち。）</h3>
-    <p>猫 / 一人旅 / 樹木 / 観葉植物 / RPG / 任天堂ゲーム / 翻訳もの児童文学 / ファンタジー / 幻想文学 / マジックリアリズム / 文化人類学 / アーシュラ・K・ル＝グウィン / パトリック・ロスファス / ミヒャエル・エンデ / J・R・R・トールキン / ラルフ・イーザウ / ロード・ダンセイニ / トーベ・ヤンソン / レイ・ブラッドベリ / ガルシア・マルケス / グレゴリー・コルベール / ストレイシープ（ポーとメリー） / 宮沢賢治 / 長田弘 / 村山早紀 / 上橋菜穂子 / 五十嵐大介 / 市川春子 / 羽海野チカ / こうの史代</p>
+    <p>ポメラDM20→ポメラDM100→MacBook Air & <a href="https://stone-type.jp/" target="_blank" rel="noopenner noreferrer">Stone</a> & GitHub。VSCode執筆や校正ツールは気になりつつも未導入。Stoneのシンプルな画面が気に入っています。<br>あと、今は亡きWebサービスの即興小説トレーニングに不定期ながら7年ほど投稿していました（<a href="https://twitter.com/feelingskyblue/status/1621058939579420673" target="_blank" rel="noopenner noreferrer">サービス終了に気づいた時の嘆き</a>）。今ではもう閲覧できない…というか同運営の小説投稿サイトであるソナーズへリダイレクトされてしまうんですが、即興小説＆壁打ち用アカウントの<a href="https://twitter.com/windfiel_d" target="_blank" rel="noopenner noreferrer">此処</a>から名残がちょっと見られます。ブラウザで一気呵成に執筆するあの感覚もけっこう好きでした……</p>
+    <h3 class="heading--default"><span class="heading--colorDark">favorites</span></h3>
+    <p>猫 / 一人旅 / 樹木 / 観葉植物 / RPG / 任天堂ゲーム / 翻訳もの児童文学 / ファンタジー / 幻想文学 / マジックリアリズム / アーシュラ・K・ル＝グウィン / パトリック・ロスファス / ミヒャエル・エンデ / J・R・R・トールキン / ラルフ・イーザウ / ロード・ダンセイニ / トーベ・ヤンソン / レイ・ブラッドベリ / ガルシア・マルケス / グレゴリー・コルベール / ストレイシープ（ポーとメリー） / 宮沢賢治 / 長田弘 / 村山早紀 / 上橋菜穂子 / 五十嵐大介 / 市川春子 / 羽海野チカ / こうの史代 / 清家雪子 / 鈴木志保</p>
     <h3 class="heading--default heading--colorDark">feelingskyblue?</h3>
     <p>Twitterなどで使っているID「feelingskyblue」は、呼吸書房の前身となる創作サイトのURLであると共に、元を辿れば中学時代に書いていた主人公の名前に関連するものでもあります。<br class="hidden-phone">ペンネームではありませんが、愛着のある文字列です。</p>
     <h3 class="heading--default heading--colorDark">I'm here.</h3>
