--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: layout.liquid
             <img src="/assets/img/logo.svg" alt="呼吸書房"  width="150" height="40" class="logo__image" loading="lazy">
           </h1>
           <div class="home__announce">
-            <p><a href="/about/log/">last update</a> 2023.5.15 『すべての樹木は光』試し読みを増量</p>
+            <p>last update 2023.6.7 寄稿小説の追加</p>
           </div>  
         </header>
         <p>呼吸書房へようこそ。当サイトでは、私、風野湊による作品を公開しています。<br class="hidden-phone">路上で出会った本棚のように、どうぞゆっくりとお楽しみください。</p>
