--- a/event/index.html
+++ b/event/index.html
@@ -11,14 +11,16 @@ boxshadow: true
   <section class="home__section__innner-sub">
     <h2 class="heading--primary heading--color">schedule</h2>
     <ul class="list__style--dot">
-      <li>2023.11.11(土) <a href="https://bunfree.net/event/tokyo37/" target="_blank" rel="noopenner noreferrer">文学フリマ東京37</a> <a href="https://c.bunfree.net/e/aXs" target="_blank" rel="noopenner noreferrer">Webカタログ</a></li>
-      <li>2024.01.14(日) <a href="https://bunfree.net/event/kyoto08/" target="_blank" rel="noopenner noreferrer">文学フリマ京都8</a></li>
-      <li>2024.春 文学フリマ東京 or 文学フリマ岩手（検討中）</li>
+      <li>2024.01.14(日) <a href="https://bunfree.net/event/kyoto08/" target="_blank" rel="noopenner noreferrer">文学フリマ京都8</a> <a href="https://c.bunfree.net/e/b5E" target="_blank" rel="noopenner noreferrer">Webカタログ</a></li>
+      <li>2024.05.19(日) <a href="https://bunfree.net/event/tokyo38/" target="_blank" rel="noopenner noreferrer">文学フリマ東京38</a></li>
+      <li>2024.06.16(日) <a href="https://bunfree.net/event/iwate09/" target="_blank" rel="noopenner noreferrer">文学フリマ岩手9</a>（抽選結果待ち）</li>
+      <li>2024.07.28(日) <a href="https://bunfree.net/event/kagawa01/" target="_blank" rel="noopenner noreferrer">文学フリマ香川1</a>（抽選結果待ち）</li>
     </ul>
   </section>
   <section class="home__section__innner-sub scroll__wrapper">
     <h2 class="heading--primary heading--color">log</h2>
     <ul class="list__style--dot op_7 event-log__wrapper">
+      <li>2023.11 文学フリマ東京37 <a href="https://c.bunfree.net/e/aXs" target="_blank" rel="noopenner noreferrer">webカタログ</a></li>
       <li>2023.09 文学フリマ大阪11 <a href="https://c.bunfree.net/c/osaka11/!/F/13" target="_blank" rel="noopenner noreferrer">webカタログ</a></li>
       <li>2023.05 文学フリマ東京36 <a href="https://c.bunfree.net/c/tokyo36/h1/J/14" target="_blank" rel="noopenner noreferrer">webカタログ</a></li>
       <li>2023.02 文学フリマ広島5 <a href="https://c.bunfree.net/c/hiroshima05/28353" target="_blank" rel="noopenner noreferrer">webカタログ</a></li>
