--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: layout.liquid
             <img src="/assets/img/logo.svg" alt="呼吸書房"  width="150" height="40" class="logo__image" loading="lazy">
           </h1>
           <div class="home__announce">
-            <p>last update 2023.11.4 『十一月の春の庭』新刊情報追加</p>
+            <p>last update 2024.1.6 イベント情報・小説一覧更新</p>
           </div>  
         </header>
         <p>呼吸書房へようこそ。当サイトでは、私、風野湊による作品を公開しています。<br class="hidden-phone">路上で出会った本棚のように、どうぞゆっくりとお楽しみください。</p>
@@ -29,10 +29,7 @@ layout: layout.liquid
         </nav>
         <div class="home__news">
           <div class="home__news-body">
-            <p>2023.11.11：<a href="https://bunfree.net/event/tokyo37/" target="_blank" rel="noopenner noreferrer">文学フリマ東京37</a> 出店予定｜東京流通センター 第二展示場 か-09 呼吸書房→<a href="https://c.bunfree.net/e/aXs" target="_blank" rel="noopenner noreferrer">Webカタログ</a></p>
-            <!--
-              <p>2024.1.14：<a href="https://bunfree.net/event/kyoto08/" target="_blank" rel="noopenner noreferrer">文学フリマ京都8</a> 出店予定｜京都市勧業館みやこめっせ 1F 第二展示場 呼吸書房（Webカタログ準備中）</p>
-            -->
+            <p>2024.1.14：<a href="https://bunfree.net/event/kyoto08/" target="_blank" rel="noopenner noreferrer">文学フリマ京都8</a> 出店予定｜京都市勧業館みやこめっせ 1F 第二展示場 え-51 呼吸書房→<a href="https://c.bunfree.net/e/b5E" target="_blank" rel="noopenner noreferrer">Webカタログ</a></p>
           </div>
         </div>
       </div>
