--- a/event/index.html
+++ b/event/index.html
@@ -12,7 +12,7 @@ boxshadow: true
     <h2 class="heading--primary heading--color">schedule</h2>
     <ul class="list__style--dot">
       <li>2024.07.28(日) <a href="https://bunfree.net/event/kagawa01/" target="_blank" rel="noopenner noreferrer">文学フリマ香川1</a>（抽選結果待ち）</li>
-      <li>2024.06.16(日) <a href="https://bunfree.net/event/iwate09/" target="_blank" rel="noopenner noreferrer">文学フリマ岩手9</a>（抽選落ち＆委託予定）</li>
+      <li>2024.06.16(日) <a href="https://bunfree.net/event/iwate09/" target="_blank" rel="noopenner noreferrer">文学フリマ岩手9</a>（抽選落ちのため出店はありません。<a href="https://libsy.net/" target="_blank" rel="noopenner noreferrer">山川夜高さん</a></li>のスペースに一部書籍を委託予定です）</li>
       <li>2024.05.19(日) <a href="https://bunfree.net/event/tokyo38/" target="_blank" rel="noopenner noreferrer">文学フリマ東京38</a>→<a href="https://c.bunfree.net/e/bfo" target="_blank" rel="noopenner noreferrer">Webカタログ</a></li>
     </ul>
   </section>
